added new paragraph

--- a/homepage.html
+++ b/homepage.html
@@ -3,5 +3,6 @@
 <body>
 <h1> Welcome to Git, GitHub </h1>
 <p>My name is Resham Kumar Thapa</p>
+<p>this is a new paragraph added.</p>
 </body>
 </html>
